add locations and schedules
Co-authored-by: egalindorl <egalindorl@users.noreply.github.com>
Co-authored-by: EdgarRostro <EdgarRostro@users.noreply.github.com>
Co-authored-by: Eduardo Villalpando Mello <edvilme@users.noreply.github.com>
Co-authored-by: Matías Méndez <matiasandov@users.noreply.github.com>

--- a/app_dif/android/app/src/main/AndroidManifest.xml
+++ b/app_dif/android/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
         android:label="app_dif"
         android:icon="@mipmap/ic_launcher">
 
-        <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyABwmbt_dUgK2vPvSLOOE5mC2L5mSZaopU"/>
+        <!-- <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyABwmbt_dUgK2vPvSLOOE5mC2L5mSZaopU"/> -->
 
         <activity
             android:name=".MainActivity"
