--- a/app_dif/pubspec.yaml
+++ b/app_dif/pubspec.yaml
@@ -30,12 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  url_launcher: ^6.0.12
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.0.11
+
+  # google_maps_flutter: ^2.0.11
 
 dev_dependencies:
   flutter_test:
